--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://rogs.me/"
 languageCode = "en-us"
-title = "rogs | Blog"
+title = "rogs"
 theme = "archie"
 staticDir = ["static"]
 paginate=3 # articles per page
@@ -47,11 +47,16 @@ url = "/"
 weight = 1
 
 [[menu.main]]
+name = "Projects"
+url = "/projects"
+weight = 2
+
+[[menu.main]]
 name = "Blog"
 url = "/posts"
-weight = 2
+weight = 3
 
 [[menu.main]]
 name = "Tags"
 url = "/tags"
-weight = 3
+weight = 4
