--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@ pages:
   - ssh-keyscan $SSH_HOST >> ~/.ssh/known_hosts
   - chmod 644 ~/.ssh/known_hosts
   script:
-  - ssh -p $SSH_PORT $SSH_USER@$SSH_HOST "hostname 
-                                        echo 'Welcome!!!'"
+  - ssh -p $SSH_PORT $SSH_USER@$SSH_HOST "hostname && pwd"
   only:
   - master
