Removed old deploy script

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 image: alpine:latest
 
-pages:
+deploy:
   stage: deploy
   before_script:
   - 'command -v ssh-agent >/dev/null || ( apk add --update openssh )' 
