--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,9 @@ copyright = "© Rogs"
     name = "fas fa-envelope"
     url = "mailto:roger@rogs.me"
   [[params.social]]
+    name = "fab fa-git"
+    url = "https://git.rogs.me/"
+  [[params.social]]
     name = "fab fa-gitlab"
     url = "https://gitlab.com/rogs"
   [[params.social]]
