--- a/config.toml
+++ b/config.toml
@@ -56,8 +56,8 @@ url = "/posts"
 weight = 4
 
 [[menu.main]]
-name = "Tags"
-url = "/tags"
+name = "Contact"
+url = "/contact"
 weight = 5
 
 [markup.goldmark.renderer]
