--- a/config.toml
+++ b/config.toml
@@ -1,9 +1,8 @@
-baseURL = "https://rogs.me/"
+baseURL = "/"
 languageCode = "en-us"
 title = "rogs"
 theme = "archie"
 staticDir = ["static"]
-paginate=3 # articles per page
 copyright = "© Roger Gonzalez"
 
 
@@ -81,22 +80,17 @@ weight = 1
 
 [[menu.main]]
 name = "Resume"
-url = "/resume"
+url = "/resume/"
 weight = 2
-
-# [[menu.main]]
-# name = "Projects"
-# url = "/projects"
-# weight = 3
 
 [[menu.main]]
 name = "Posts"
-url = "/posts"
+url = "/posts/"
 weight = 3
 
 [[menu.main]]
 name = "Contact"
-url = "/contact"
+url = "/contact/"
 weight = 4
 
 [markup.goldmark.renderer]
