Added gitlab to montevideo.restaurant

--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,8 @@ copyright = "© Roger Gonzalez"
     url = "https://montevideo.restaurant/"
     description = "A restaurant index page for the city of Montevideo (Uruguay)."
     github = "https://github.com/rogsme/montevideo.restaurant"
-    rogsgit = "https://git.rogs.me/montevideo.restaurant.git/"
+    rogsgit = "https://git.rogs.me/montevideo.restaurant.git"
+    gitlab = "https://gitlab.com/rogs/montevideo.restaurant"
   [[params.projects.personal]]
     name = "YAMS"
     url = "https://yams.media/"
