--- a/config.toml
+++ b/config.toml
@@ -41,6 +41,11 @@ copyright = "© Roger Gonzalez"
     url = "https://nojs.sugarfi.dev/"
     nextUrl = "https://nojs.sugarfi.dev/next.php?url=https://rogs.me/"
     prevUrl = "https://nojs.sugarfi.dev/prev.php?url=https://rogs.me/"
+  [[params.webring]]
+    name = "retronaut"
+    url = "https://webring.dinhe.net/"
+    nextUrl = "https://webring.dinhe.net/next/https://rogs.me"
+    prevUrl = "https://webring.dinhe.net/prev/https://rogs.me"
   # [[params.webring]]
   #   name = "geekring"
   #   url = "https://geekring.net/"
