--- a/config.toml
+++ b/config.toml
@@ -129,19 +129,24 @@ url = "/about/"
 weight = 2
 
 [[menu.main]]
+name = "Resume"
+url = "/resume/"
+weight = 3
+
+[[menu.main]]
 name = "Contact"
 url = "/contact/"
-weight = 3
+weight = 4
 
 [[menu.main]]
 name = "Posts"
 url = "/posts/"
-weight = 4
+weight = 5
 
 [[menu.main]]
 name = "Donate"
 url = "/donate/"
-weight = 5
+weight = 6
 
 [markup.goldmark.renderer]
   unsafe = true
