Added more personal projects

--- a/config.toml
+++ b/config.toml
@@ -76,6 +76,24 @@ copyright = "© Roger Gonzalez"
     gitlab = "https://gitlab.com/rogs/yams"
     rogsgit = "https://git.rogs.me/yams.git/"
   [[params.projects.personal]]
+    name = "subscleaner"
+    url = "https://pypi.org/project/subscleaner/"
+    description = "A Python script that removes advertisements from subtitle files."
+    rogsgit = "https://git.rogs.me/subscleaner.git/"
+    gitlab = "https://gitlab.com/rogs/subscleaner"
+  [[params.projects.personal]]
+    name = "ute_homeassistant_integration "
+    url = "https://github.com/rogsme/ute_homeassistant_integration"
+    description = "Home Assistant UTE (Administración Nacional de Usinas y Trasmisiones Eléctricas) component for Uruguay 🇺🇾"
+    github = "https://github.com/rogsme/ute_homeassistant_integration"
+    gitlab = "https://gitlab.com/rogs/ute_homeassistant_integration"
+  [[params.projects.personal]]
+    name = "ute-wrapper"
+    url = "https://pypi.org/project/ute-wrapper/"
+    description = "A convenient wrapper for interacting with the UTE (Administración Nacional de Usinas y Trasmisiones Eléctricas) API in Uruguay 🇺🇾"
+    rogsgit = "https://git.rogs.me/ute.git/"
+    gitlab = "https://gitlab.com/rogs/ute"
+  [[params.projects.personal]]
     name = "The Infinite Website"
     url = "https://theinfinitewebsite.com/"
     description = "A web application that dynamically generates HTML on runtime using ChatGPT and serves it in an async Flask application."
