Add personal projects and Gitea links
- Update personal projects list with new entries.
- Add Gitea links to personal projects.
- Update `content/about.md` to include Git server link.
- Update shortcodes to use gitea-small.png.
- Add gitea-small.png to static assets.

--- a/config.toml
+++ b/config.toml
@@ -63,38 +63,65 @@ copyright = "© Roger Gonzalez"
     name = "YAMS"
     url = "https://yams.media/"
     description = "A higly opinionated media server"
+    gitea = "https://git.rogs.me/rogs/yams"
     gitlab = "https://gitlab.com/rogs/yams"
+    github = "https://github.com/rogsme/yams"
   [[params.projects.personal]]
-    name = "montevideo.restaurant"
-    url = "https://montevideo.restaurant/"
-    description = "A restaurant index page for the city of Montevideo (Uruguay)."
-    github = "https://github.com/rogsme/montevideo.restaurant"
-    gitlab = "https://gitlab.com/rogs/montevideo.restaurant"
+    name = "ForgeLLM"
+    url = "https://melpa.org/#/forge-llm"
+    description = "forge-llm brings LLM-powered PR descriptions to Emacs—auto-generating clear, structured summaries from your git diffs."
+    gitea = "https://git.rogs.me/rogs/forge-llm"
+    gitlab = "https://gitlab.com/rogs/forge-llm"
+    github = "https://github.com/rogsme/forge-llm"
   [[params.projects.personal]]
     name = "subscleaner"
     url = "https://pypi.org/project/subscleaner/"
     description = "A Python script that removes advertisements from subtitle files."
+    gitea = "https://git.rogs.me/rogs/subscleaner"
     gitlab = "https://gitlab.com/rogs/subscleaner"
+    github = "https://github.com/rogsme/subscleaner"
   [[params.projects.personal]]
     name = "bitwarden-to-keepass"
     url = "https://gitlab.com/rogs/bitwarden-to-keepass"
     description = "Export (most of) your Bitwarden items into KeePass (kdbx) database. That includes logins - with TOTP seeds, URIs, custom fields, attachments and secure notes"
+    gitea = "https://git.rogs.me/rogs/bitwarden-to-keepass"
     gitlab = "https://gitlab.com/rogs/bitwarden-to-keepass"
+    github = "https://github.com/rogsme/bitwarden-to-keepass"
+  [[params.projects.personal]]
+    name = "montevideo.restaurant"
+    url = "https://montevideo.restaurant/"
+    description = "A restaurant index page for the city of Montevideo (Uruguay)."
+    gitea = "https://git.rogs.me/rogs/montevideo.restaurant"
+    github = "https://github.com/rogsme/montevideo.restaurant"
+    gitlab = "https://gitlab.com/rogs/montevideo.restaurant"
   [[params.projects.personal]]
     name = "caldav2google"
     url = "https://gitlab.com/rogs/caldav2google"
     description = "A Python utility that seamlessly syncs your CalDAV calendar to Google Calendar, with smart change detection and event tracking."
+    gitea = "https://git.rogs.me/rogs/caldav2google"
     gitlab = "https://gitlab.com/rogs/caldav2google"
+    github = "https://github.com/rogsme/caldav2google"
   [[params.projects.personal]]
-    name = "dendrite-docker-bridges"
+    name = "synapse-docker-bridges"
     url = "https://gitlab.com/rogs/dendrite-docker-bridges"
     description = "Self-host your own Matrix server with WhatsApp, Telegram & Discord bridges - all configured automatically via Docker! Simple setup scripts handle the heavy lifting, letting you connect your favorite chat platforms in minutes."
-    gitlab = "https://gitlab.com/rogs/dendrite-docker-bridges"
+    gitea = "https://git.rogs.me/rogs/synapse-docker-bridges"
+    gitlab = "https://gitlab.com/rogs/synapse-docker-bridges"
+    github = "https://github.com/rogsme/synapse-docker-bridges"
   [[params.projects.personal]]
     name = "cleanmedia"
     url = "https://gitlab.com/rogs/cleanmedia"
     description = "A poor man's data rentention policy tool for dendrite home servers"
+    gitea = "https://git.rogs.me/rogs/cleanmedia"
     gitlab = "https://gitlab.com/rogs/cleanmedia"
+    github = "https://github.com/rogsme/cleanmedia"
+  [[params.projects.personal]]
+    name = "TimelapseTuner"
+    url = "https://git.rogs.me/rogs/timeplapse_tuner"
+    description = "Timelapse Tuner is a Bash script that automates the process of creating timelapse videos with randomly selected background music. It merges a timelapse video file with a randomly chosen audio file from the current directory, applying fade-in and fade-out effects to the audio for a polished result"
+    gitea = "https://git.rogs.me/rogs/timeplapse_tuner"
+    gitlab = "https://gitlab.com/rogs/timelapse_tuner"
+    github = "https://github.com/rogsme/timelapse_tuner"
 
   [[params.projects.work]]
     name = "Ario"
